--- a/Dockerfile.bck
+++ b/Dockerfile.bck
@@ -1,12 +1,12 @@
-
-FROM node:20-alpine as build
+FROM node:22-alpine AS build
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm ci
 COPY . .
 RUN npm run build
+RUN npm prune --production
 
-FROM node:20-alpine as runner
+FROM node:22-alpine AS runner
 WORKDIR /app
 
 RUN addgroup -g 1001 -S nodejs
@@ -18,7 +18,6 @@ COPY --from=build --chown=nextjs:nodejs /app/next.config.mjs ./
 COPY --from=build --chown=nextjs:nodejs /app/public ./public
 COPY --from=build --chown=nextjs:nodejs /app/.next ./.next
 COPY --from=build --chown=nextjs:nodejs /app/node_modules ./node_modules
-COPY --from=build --chown=nextjs:nodejs /app/package.json ./
 
 USER nextjs
 ENV NEXT_TELEMETRY_DISABLED 1
